test/compile-fail/resolution/conflicts/struct/expected.txt
error[E0428]: the name `b` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/struct/top.rhdl:3:8
  │
3 │ struct b {}
  │        - previous definition of the name `b` here
  ·
7 │ struct b {}
  │        ^ `b` redefined here

